[gd_scene load_steps=3 format=3 uid="uid://dixeudgqhntlc"]

[ext_resource type="Script" uid="uid://p27ieik7ddba" path="res://items/effects/persistent_damage_effect.gd" id="1_hmsnh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hmsnh"]

[node name="PersistentDamageEffect" type="Area2D"]
script = ExtResource("1_hmsnh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hmsnh")
debug_color = Color(0.882353, 0, 0, 0.419608)

[node name="TickTimer" type="Timer" parent="."]
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)

[node name="LifetimeTimer" type="Timer" parent="."]
